fix overlap in new user form with error msg and pw label

--- a/public/assets/css/landing.css
+++ b/public/assets/css/landing.css
@@ -115,8 +115,9 @@ input:-webkit-autofill, input:-webkit-autofill:active, input:-webkit-autofill:ho
 }
 
 #replace-name {
-  font-size: 16px;
+  font-size: 12px;
   color: #00cb88;
+  margin-bottom: 15px;
 }
 /* label color */
 .input-field {
